--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -3,8 +3,8 @@ name: RELEASE
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  #push:
-  branches: [ gh-pages ]
+  push:
+    branches: [ gh-pages, main ]
   #schedule:
   #  - cron:  '0 * * * 1'
   #  - cron:  '50 17 * * *'
