--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -32,7 +32,7 @@ jobs:
     - uses: stefanzweifel/git-auto-commit-action@v2
       with:
         commit_message: "Actualizacion"
-        branch: gh-pages
+        branch: main
         # Optional glob pattern of files which should be added to the commit
         #file_pattern: /
         # Optional local file path to the repository
