--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -43,15 +43,13 @@ jobs:
         commit_user_email: lmonsalve22@gmail.com
         commit_author: DataIntelligence BOT <lmonsalve22@gmail.com>
         push_options: '--force'
-  refresh:
+  github-pages:
     runs-on: ubuntu-latest
+    name: Update Github Pages Initiatives
     steps:
-      - name: Trigger GitHub pages rebuild
-        run: |
-          curl --fail --request POST \
-            --url https://api.github.com/repos/${{ github.repository }}/pages/builds \
-            --header "Authorization: Bearer $USER_TOKEN"
-        env:
-          # You must create a personal token with repo access as GitHub does
-          # not yet support server-to-server page builds.
-          USER_TOKEN: ${{ secrets.USER_TOKEN }}
+    - name: Jekyll update github pages without new commit
+      uses: DP6/jekyll-update-pages-action@v1.0.1
+      with:
+        DEPLOY_TOKEN: ${{ secrets.GH_PAGES_DEPLOY_TOKEN }}
+        USER: ${{ secrets.GH_PAGES_USER }}
+        FILTER:  'is%3Apublic%20org%3Adp6'
