--- a/.github/workflows/RELEASE.yml
+++ b/.github/workflows/RELEASE.yml
@@ -43,13 +43,20 @@ jobs:
         commit_user_email: lmonsalve22@gmail.com
         commit_author: DataIntelligence BOT <lmonsalve22@gmail.com>
         push_options: '--force'
-  github-pages:
-    runs-on: ubuntu-latest
-    name: Update Github Pages Initiatives
-    steps:
+    
     - name: Jekyll update github pages without new commit
       uses: DP6/jekyll-update-pages-action@v1.0.1
       with:
         DEPLOY_TOKEN: ${{ secrets.GH_PAGES_DEPLOY_TOKEN }}
         USER: ${{ secrets.GH_PAGES_USER }}
         FILTER:  'is%3Apublic%20org%3Adp6'
+  #github-pages:
+  #  runs-on: ubuntu-latest
+  #  name: Update Github Pages Initiatives
+  #  steps:
+  #  - name: Jekyll update github pages without new commit
+  #    uses: DP6/jekyll-update-pages-action@v1.0.1
+  #    with:
+  #      DEPLOY_TOKEN: ${{ secrets.GH_PAGES_DEPLOY_TOKEN }}
+  #      USER: ${{ secrets.GH_PAGES_USER }}
+  #      FILTER:  'is%3Apublic%20org%3Adp6'
