--- a/.github/workflows/RELEASE_gp.yml
+++ b/.github/workflows/RELEASE_gp.yml
@@ -1,10 +1,10 @@
-name: RELEASE
+name: RELEASE_gp
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ gh-pages, main ]
+    branches: [ gh-pages ]
   #schedule:
   #  - cron:  '0 * * * 1'
   #  - cron:  '50 17 * * *'
