--- a/.github/workflows/RELEASE_main.yml
+++ b/.github/workflows/RELEASE_main.yml
@@ -51,6 +51,16 @@ jobs:
         USER: ${{ secrets.GH_PAGES_USER }}
         FILTER:  'is%3Apublic%20org%3Adp6'
 
+    - uses: actions/checkout@master
+
+      - name: Merge main -> gh-pages
+        uses: devmasx/merge-branch@master
+        with:
+          type: now
+          from_branch: main
+          target_branch: gh-pages
+          github_token: ${{ github.token }}
+
   #github-pages:
   #  runs-on: ubuntu-latest
   #  name: Update Github Pages Initiatives
