--- a/.github/workflows/RELEASE_main.yml
+++ b/.github/workflows/RELEASE_main.yml
@@ -51,8 +51,8 @@ jobs:
         USER: ${{ secrets.GH_PAGES_USER }}
         FILTER:  'is%3Apublic%20org%3Adp6'
 
-    - uses: actions/checkout@master
-      uses: devmasx/merge-branch@master
+    - name: Merge 
+      uses: actions/checkout@master
       with:
         type: now
         from_branch: main
