--- a/.github/workflows/RELEASE_main.yml
+++ b/.github/workflows/RELEASE_main.yml
@@ -57,7 +57,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - uses: Embraser01/update-git-branch-action@v1.0.0
-      if: github.ref == 'refs/heads/main'
+      if: github.ref == 'refs/heads/master'
       with:
         branch: gh-pages
         force: 1 # To push-force to the branch
