--- a/.github/workflows/RELEASE_main.yml
+++ b/.github/workflows/RELEASE_main.yml
@@ -51,25 +51,18 @@ jobs:
         USER: ${{ secrets.GH_PAGES_USER }}
         FILTER:  'is%3Apublic%20org%3Adp6'
 
-  update-branch:
+  sync-branch:
     runs-on: ubuntu-latest
     steps:
-      - uses: lcdsmao/update-branch@v3
+      - uses: actions/checkout@master
+
+      - name: Merge development -> staging
+        uses: devmasx/merge-branch@master
         with:
-          # Or use personal access token
-          token: ${{ secrets.GITHUB_TOKEN }}
-          # One of MERGE, SQUASH, REBASE (default: MERGE)
-          autoMergeMethod: SQUASH
-          # Ignore pull requests without these labels
-          requiredLabels: auto-merge
-          # Required at least 2 approves (default: 0)
-          requiredApprovals: 2
-          # Required approvals from all requested reviewers
-          allRequestedReviewersMustApprove: true
-          # Required these status checks success
-          requiredStatusChecks: |
-            build_pr
-            WIP
+          type: now
+          from_branch: main
+          target_branch: gh-pages
+          github_token: ${{ github.token }}
 
   #github-pages:
   #  runs-on: ubuntu-latest
